# story-shuffler

./: Cargo.toml  README.md  check.sh  eframe_template.js  index.html  manifest.json  story_shuffler.css  story_shuffler.js  story_shuffler_bg.wasm  sw.js
.github/workflows/: rust.yml
assets/: manifest.json
src/: app.rs  lib.rs  main.rs
