[package]
name = "story_shuffler"
version = "1.0.0"
authors = ["Todd L Smith <todd@availlang.org>"]
edition = "2021"
rust-version = "1.65"

# General dependencies.
[dependencies]
color-hex = "0.2.0"
egui = { version = "0.21.0", features = ["color-hex", "persistence"] }
eframe = { version = "0.21.3", default-features = false, features = [
    # Make egui comptaible with screen readers.
    "accesskit",
    "default_fonts",
    "glow",
    "persistence"
] }
petgraph = "0.6.3"
rand = "0.8.5"
regex = "1.7.3"
serde = { version = "1.0.158", features = ["derive"] }

# Native dependencies.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# Web dependencies.
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
getrandom = { version = "0.2.8", features = ["js"] }
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2

# Optimize all dependencies even in debug builds.
[profile.dev.package."*"]
opt-level = 2
